--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -49,14 +49,6 @@ div .itemTextbox { height: 90%; width: 20px; }
 	border: 3px solid blue;
 }
 
-.menuitem .content {
-	position: relative;
-	height: 160px;
-	width: 160px;
-	top: -157px;
-	z-index: 3;
-}
-
 .menuitem .overlay {
 	position: relative;
 	height: 156px;
@@ -64,6 +56,28 @@ div .itemTextbox { height: 90%; width: 20px; }
 	top: -3px;
 	left: -3px;
 	z-index: 4;
+}
+
+.menuitem .qty {
+	font-weight: bold;
+	border: 3px solid black;
+	text-align: center;
+	border-radius: 20px;
+	position: relative;
+	width: 20px;
+	height: 20px;
+	top: -157px;
+	left: 121px;
+	background: yellow;
+	z-index: 5;
+}
+
+.menuitem .content {
+	position: relative;
+	height: 160px;
+	width: 160px;
+	top: -177px;
+	z-index: 3;
 }
 
 .menuitem .overlay:hover {
@@ -90,9 +104,7 @@ div .itemTextbox { height: 90%; width: 20px; }
 	background: rgba(178,34,34,0.6);
 }
 
-.menuitem .qty {
-	z-index: 5;
-}
+
 
 .menuitem .icon {
 	background: url("http://placehold.it/75x75");
@@ -127,11 +139,11 @@ div .itemTextbox { height: 90%; width: 20px; }
 			<div class="up"></div>
 			<div class="down"></div>
 		</div>
+		<div class="qty">4</div>
 		<div class="content">
 			<div class="controls"></div>
 			<div class="icon"></div>
 			<div class="name">Chocolate Chip</div>
-			<div class="qty"></div>
 			<div class="description">Chocolate chip cookies are fuckin great man!</div>
 		</div>
 	</div>
@@ -140,43 +152,67 @@ div .itemTextbox { height: 90%; width: 20px; }
 			<div class="up"></div>
 			<div class="down"></div>
 		</div>
+		<div class="qty">40</div>
 		<div class="content">
 			<div class="controls"></div>
 			<div class="icon"></div>
 			<div class="name"></div>
-			<div class="qty"></div>
 			<div class="description"></div>
 		</div>
 		
 	</div>
 	<div class="menuitem">
-		<div class="controls"></div>
-		<div class="icon"></div>
-		<div class="name"></div>
-		<div class="qty"></div>
-		<div class="description"></div>
+		<div class="overlay">
+			<div class="up"></div>
+			<div class="down"></div>
+		</div>
+		<div class="qty">400</div>
+		<div class="content">
+			<div class="controls"></div>
+			<div class="icon"></div>
+			<div class="name"></div>
+			<div class="description"></div>
+		</div>
 	</div>
 	<!-- we are going to have to figure out margins programatically-->
 	<div class="menuitem marginfix">
-		<div class="controls"></div>
-		<div class="icon"></img></div>
-		<div class="name"></div>
+		<div class="overlay">
+			<div class="up"></div>
+			<div class="down"></div>
+		</div>
 		<div class="qty"></div>
-		<div class="description"></div>
+		<div class="content">
+			<div class="controls"></div>
+			<div class="icon"></div>
+			<div class="name"></div>
+			<div class="description"></div>
+		</div>
 	</div>
 	<div class="menuitem marginfix">
-		<div class="controls"></div>
-		<div class="icon"></div>
-		<div class="name"></div>
+		<div class="overlay">
+			<div class="up"></div>
+			<div class="down"></div>
+		</div>
 		<div class="qty"></div>
-		<div class="description"></div>
+		<div class="content">
+			<div class="controls"></div>
+			<div class="icon"></div>
+			<div class="name"></div>
+			<div class="description"></div>
+		</div>
 	</div>
 	<div class="menuitem marginfix">
-		<div class="controls"></div>
-		<div class="icon"></div>
-		<div class="name"></div>
+		<div class="overlay">
+			<div class="up"></div>
+			<div class="down"></div>
+		</div>
 		<div class="qty"></div>
-		<div class="description"></div>
+		<div class="content">
+			<div class="controls"></div>
+			<div class="icon"></div>
+			<div class="name"></div>
+			<div class="description"></div>
+		</div>
 	</div>
 </div>
 <br>
