--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -22,262 +22,14 @@ div .button:hover { cursor: pointer; }
 div .text { padding-left: 5px; padding-top: 2px; vertical-align: middle; }
 div .itemTextbox { height: 90%; width: 20px; }
  
- 
-.menu {
-	width: 494px;
-	border: 3px solid black;
-	padding: 10px;
-}
- 
- 
- 
-.menuitem {
-	font-family: helvetica;
-	width: 150px;
-	height: 150px;
-	border: 1px solid black;
-	display: inline-block;
-	padding: 5px;
-	z-index: 1;
-	overflow: none;
- 
-}
- 
- 
- 
-.menuitem:hover {
-	cursor: hand;
-	padding: 3px;
-	border: 3px solid blue;
-}
- 
-.menuitem .overlay {
-	position: relative;
-	height: 156px;
-	width: 156px;
-	top: -3px;
-	left: -3px;
-	z-index: 4;
-}
- 
-.menuitem .qty {
-	font-weight: bold;
-	border: 3px solid black;
-	text-align: center;
-	border-radius: 20px;
-	position: relative;
-	width: 20px;
-	height: 20px;
-	top: -157px;
-	left: 121px;
-	background: yellow;
-	z-index: 5;
-}
- 
-.menuitem .content {
-	position: relative;
-	height: 160px;
-	width: 160px;
-	top: -177px;
-	z-index: 3;
-}
- 
-.menuitem .overlay:hover {
- 
-}
- 
-.menuitem .overlay .up {
-	width: 100%;
-	height: 50%;
-	/*background: rgba(0,255,127,0.2);*/
-}
- 
-.menuitem .overlay .down {
-	width: 100%;
-	height: 50%;
-	/*background: rgba(178,34,34,0.2);*/
-}
- 
-.menuitem .overlay .up:hover {
-	background: rgba(0,255,127,0.6);
-}
- 
-.menuitem .overlay .down:hover {
-	background: rgba(178,34,34,0.6);
-}
- 
- 
- 
-.menuitem .icon {
-	background: url("http://placehold.it/75x75");
-	margin: auto;
-	width: 75px;
-	height: 75px;
-	border: 1px solid black;
-}
- 
-.menuitem .name {
-	font-size: 1em;
-	margin: auto;
-	width: 90%;
-	text-align: center;
-}
- 
-.menuitem .description { 
-	width: 90%;
-	font-size: 0.8em;
-	margin: auto;
-}
- 
-.marginfix {
-	margin-bottom: -4px;
-}
+
 </style> 
+<link rel="stylesheet" type="text/css" href="style.css" />
+<script type="text/javascript" src="Menu.js" /></script>
+<script type="text/javascript" src="MenuItem.js" /></script>
  
-<script> 
- 
-Menu.prototype = {};
-Menu.constructor = Menu;
- 
-function Menu ( name ) {
-	this.name = name;
-	this.menuitems = [];
-	Object.call(this);
-}
- 
- 
-Menu.prototype.addMenuItem = function ( name, abv, icon, desc ) {
-	this.menuitems.push(new MenuItem(name,abv,icon,desc));
-}
- 
-Menu.prototype.draw = function ( ) {
-	var menu = document.createElement('div');
-	menu.className = "menu";
-	for(var i=0; i < this.menuitems.length; i++){
-		menu.appendChild(this.menuitems[i].draw());
-	}
-	return menu;
-}
- 
-MenuItem.prototype = {};
-MenuItem.constructor = MenuItem;
- 
-function MenuItem ( name, abbreviation, icon, description ) {
-	this.name = name;
-	this.abv = abbreviation;
-	this.icon = icon || "http://placehold.it/75x75";
-	this.desc = description;
-	this.qty = 0;
-}
- 
-MenuItem.prototype.increaseQty = function () {
-	++this.qty;
-	//this.updateQty();
-}
- 
-MenuItem.prototype.decreaseQty = function ( ) {
-	(this.qty>0)?--this.qty:this.qty=0;
-	//this.updateQty();
-}
- 
-MenuItem.prototype.setQty = function ( q ) {
-	if ( !(q instanceof Number) )
-		return false;
-	if(q>144) {
-		q = 144;
-		//ordering this many? let's talk!
-	}
-	if(q<0) {
-		q = 0;
-	}
-	this.qty = q;
-}
- 
-MenuItem.prototype.startHoldInc = function ( ) {
-	var that = this;
-	this.intervalID = window.setInterval(function(){that.increaseQty();that.updateQty();},100);
-}
- 
-MenuItem.prototype.startHoldDec = function ( ) {
-	var that = this;
-	this.intervalID = window.setInterval(function(){that.decreaseQty();that.updateQty();},100);
-}
- 
-MenuItem.prototype.endHold = function ( ) {
-	if(this.intervalID)
-		window.clearInterval(this.intervalID);
-}
- 
-MenuItem.prototype.drawText = function ( ) {
-	alert(this.qty);
-}
- 
-MenuItem.prototype.updateQty = function ( ) {
-	var div = document.getElementById(this.abv);
-	for(var i=0;i<div.childNodes.length;i++){
-		if(div.childNodes[i].className === "qty") {
-			div.childNodes[i].removeChild(div.childNodes[i].childNodes[0]);
-			div.childNodes[i].appendChild(document.createTextNode(this.qty));
-			return;
-		}
-	}
-}
- 
-MenuItem.prototype.draw = function ( ) { 
-	var that = this;
-	var menuitem = document.createElement('div');
-	menuitem.id = this.abv;
-	menuitem.className = "menuitem";
- 
-	var overlay = document.createElement('div');
-	overlay.className = "overlay";
-	var up = document.createElement('div');
-	up.className = "up";
-	//up.addEventListener("click",function(){that.increaseQty();that.updateQty();});
-	up.addEventListener("mousedown",function(){that.startHoldInc();});
-	up.addEventListener("mouseup",function(){that.endHold();});
-	var down = document.createElement('div');
-	down.className = "down";
-	//down.addEventListener("click",function(){that.decreaseQty();that.updateQty();});
-	down.addEventListener("mousedown",function(){that.startHoldDec();});
-	down.addEventListener("mouseup",function(){that.endHold();});
-	overlay.appendChild(up);
-	overlay.appendChild(down);
- 
-	
-	var qty = document.createElement('div');
-	qty.className = "qty";
-	qty.appendChild(document.createTextNode(this.qty));
-	qty.addEventListener("click",function(){that.drawText();});
- 
-	var content = document.createElement('div');
-	content.className = "content";
-	var controls = document.createElement('div');
-	controls.className = "controls";
-	var icon = document.createElement('div');
-	icon.className = "icon";
-	var name = document.createElement('div');
-	name.className = "name";
-	name.appendChild(document.createTextNode(this.name));
-	var description = document.createElement('div');
-	description.className = "description";
-	description.appendChild(document.createTextNode(this.desc));
- 
-	content.appendChild(controls);
-	content.appendChild(icon);
-	content.appendChild(name);
-	content.appendChild(description);
- 
-	menuitem.appendChild(overlay);
-	menuitem.appendChild(qty);
-	menuitem.appendChild(content);
- 
-	
-	return menuitem;
-}
- 
- 
- 
+<script type="text/javascript"> 
+  
 function load ( ) {
 	var menu = new Menu("2c1b");
 	menu.addMenuItem("Chocolate Chip","cc","","Choc chip own zone");
@@ -285,7 +37,6 @@ function load ( ) {
 	menu.addMenuItem("M&M","mm","","Shit cookie");
 	var md = menu.draw();
 	document.body.appendChild(md);
-	
 }
  
 </script> 
