--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -4,27 +4,11 @@
 <head> 
  
 <style type="text/css"> 
-h1 { margin:0; font-size:16px; text-decoration:underline; }
-li { color: #555555; }
-li:hover { background-color: #C3C3C3; }
-ol { list-style-type: square; }
- 
-div #cart { width: 90%; height: 83%; background-color: #f7f7f7; display: block; margin: auto; border: solid 1px #3b5998; }
-div #cart_bg { width: 400px; height: 230px; background-color: #8b9dc3; display: block; border: solid 1px #3b5998; float: left; }
-div #header { width: 90%; height: 12%; margin: auto; display: block; font-size: 1.8em; }
-div #footer { width: 100%; height: 5%; margin: auto; display: block;}
-div .cartEntry { width: 100%; height: 24px; border-bottom: solid 1px #000000; display: block; padding-top: 2px; }
-div .cartEntry:hover { background-color: #C3C3C3; }
-div .control { display: inline-block;  }
-div .controlBox { float: right; }
-div .button { color: #3b5998; } 
-div .button:hover { cursor: pointer; }
-div .text { padding-left: 5px; padding-top: 2px; vertical-align: middle; }
-div .itemTextbox { height: 90%; width: 20px; }
- 
+
 
 </style> 
 <link rel="stylesheet" type="text/css" href="style.css" />
+<script type="text/javascript" src="Cart.js" /></script>
 <script type="text/javascript" src="Menu.js" /></script>
 <script type="text/javascript" src="MenuItem.js" /></script>
  
@@ -49,7 +33,12 @@ function load ( ) {
 </script> 
  
 <body onload="load();"> 
- 
+ SWEET IDEA (note: this is really early work and i clearly suck at UI design so advice is welcome &lt;3)<br>
+ basic thought for this was thinking sweet = candy = these colors. obviously this<br>
+ is meant to be a cookie operation so maybe this color scheme is bad<br>
+ also, I am likely going to switch to a stacked row layout for this with long horizontal rows since this layout<br>
+ wouldn't show much useful stuff even if I did have pictures of cookies<br>
+ also, cart on the right obv needs to be dealt with. thanks :)
 <!--<div class="menu"> 
 	<div class="items">
 		<div class="menuitem"> 
@@ -63,11 +52,10 @@ function load ( ) {
 	<div class="cart">
 	</div>
 </div> --> 
-<br> 
-<textarea rows="30" cols="100" id="testout" style="display: none;"></textarea> 
+
+
  
- 
-<form action="https://www.paypal.com/cgi-bin/webscr" id="pp_form" method="post" onsubmit="return cart.submit();"> 
+<!--<form action="https://www.paypal.com/cgi-bin/webscr" id="pp_form" method="post" onsubmit="return cart.submit();"> 
 <input type="hidden" name="cmd" value="_s-xclick"> 
 <input type="hidden" name="hosted_button_id" value="BZAVVT52B9VAW"> 
 <table> 
@@ -81,6 +69,6 @@ function load ( ) {
 <input type="hidden" name="currency_code" value="USD"> 
 <input type="image" src="https://www.paypal.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"> 
 <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1"> 
-</form> 
+</form> -->
 </body> 
 </html> 
